--- a/people_info_webpage.html
+++ b/people_info_webpage.html
@@ -45,6 +45,7 @@
 </head>
 <body>
     <header>
+        <h2>살인 사건의 범인을 찾아라! 각 4개의 미니게임을 통과하고 힌트를 얻어 범인을 추리하자자</h2>
         <h1>인물 정보</h1>
     </header>
     <div class="container">
