--- a/people_info_webpage.html
+++ b/people_info_webpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>인물 정보</title>
+    <title>수학부 웹사이트</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -45,8 +45,8 @@
 </head>
 <body>
     <header>
-        <h2>살인 사건의 범인을 찾아라! 각 4개의 미니게임을 통과하고 힌트를 얻어 범인을 추리하자자</h2>
-        <h1>인물 정보</h1>
+        <h2>살인 사건의 범인을 찾아라! 각 4개의 미니게임을 통과하고 힌트를 얻어 범인을 추리하자</h2>
+        <h1>용의자자 정보</h1>
     </header>
     <div class="container">
         <div class="person">
