--- a/people_info_webpage.html
+++ b/people_info_webpage.html
@@ -46,7 +46,7 @@
 <body>
     <header>
         <h2>살인 사건의 범인을 찾아라! 각 4개의 미니게임을 통과하고 힌트를 얻어 범인을 추리하자</h2>
-        <h1>용의자자 정보</h1>
+        <h1>용의자 정보</h1>
     </header>
     <div class="container">
         <div class="person">
